--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="stylesheet" href="style.css">
 
   <title>La'Nexura</title>
   <meta content="" name="description">
