--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/images/logo.png" rel="icon">
-  <link href="assets/images/logo.png" rel="apple-touch-icon">
+  <link href="assets/images/.png" rel="icon">
+  <link href="assets/images/.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
