--- a/index.html
+++ b/index.html
@@ -3,68 +3,21 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Website</title>
-  <style>
-    /* General styles for desktop */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #333;
-      line-height: 1.6;
-    }
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="stylesheet" href="style.css">
 
-    .container {
-      width: 80%;
-      margin: auto;
-      padding: 20px;
-    }
+  <title>La'Nexura</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    h1 {
-      font-size: 2em;
-    }
-
-    p {
-      font-size: 1.1em;
-    }
-
-    button {
-      font-size: 1em;
-      padding: 12px 24px;
-      background-color: #007BFF;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* Mobile-specific styles */
-    @media only screen and (max-width: 767px) {
-      .container {
-        width: 90%; /* Adjust container width for mobile */
-        padding: 10px; /* Reduce padding */
-      }
-
-      h1 {
-        font-size: 1.5em; /* Smaller heading size for mobile */
-      }
-
-      p {
-        font-size: 1em; /* Adjusted font size for better readability */
-      }
-
-      button {
-        font-size: 1em;
-        padding: 10px 20px; /* Adjust button padding */
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
+  <!-- Favicons -->
+  <link href="assets/images/logo.png" rel="icon">
+  <link href="assets/images/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
